# miband2-api-py

./: Pipfile  README.md  pyproject.toml
miband2/: __init__.py  authsession.py  band2.py
