[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "miband2"
authors = [{name = "Anton Ptashnik", email = "iavtomator@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "bleak==0.20.1",
    "pyaes==1.6.1",
]

[project.urls]
Documentation = "https://github.com/anton-ptashnik/miband2-api-py"
Source = "https://github.com/anton-ptashnik/miband2-api-py"
